--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,15 @@
         "php": "^7.2.10",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/user-bundle": "~2.0",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
         "symfony/security": "4.2.*",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/translation": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
