--- a/api/.env.dist
+++ b/api/.env.dist
@@ -13,5 +13,13 @@ APP_SECRET=66141d922f02c872360661a8ff58dc6f
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://lolbestpick:@lolbestpick@database:3306/lolbestpick
+DATABASE_URL=mysql://root:root@lolbestpick_mysql:3306/lolbestpick
 ###< doctrine/doctrine-bundle ###
+
+###> friendsofsymfony/elastica-bundle ###
+ELASTICSEARCH_URL=http://lolbestpick-elasticsearch:9200/
+###< friendsofsymfony/elastica-bundle ###
+
+###> Riot API Key ###
+RIOT_API_KEY='RGAPI-65cd4eb0-774f-41da-910f-f3f648df046c'
+###< Riot API Key ###
