--- a/api/composer.json
+++ b/api/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "dolejska-daniel/riot-api": "^3",
+        "friendsofsymfony/elastica-bundle": "^5.1",
         "friendsofsymfony/rest-bundle": "^2.5",
         "jms/serializer-bundle": "^3.5",
         "symfony/console": "4.4.*",
@@ -16,6 +17,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/orm-pack": "^1.0",
         "symfony/security": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
