--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,19 @@ services:
             - database
 
     elasticsearch:
-        image: elasticsearch:6.5.4
+        image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
         container_name: lolbestpick-elasticsearch
-
+        environment:
+            - cluster.name=docker-cluster
+            - bootstrap.memory_lock=true
+            - "ES_JAVA_OPTS=-Xms2048m -Xmx2048m"
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+        ports:
+            - "9200:9200"
+    kibana:
+        image: docker.elastic.co/kibana/kibana:6.5.4
+        ports:
+            - "5601:5601"
